deployment/k8s-consumidor.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: consumidor
  namespace: sta-salud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: consumidor
  template:
    metadata:
      labels:
        app: consumidor
    spec:
      containers:
      - name: consumidor
        image: us-central1-docker.pkg.dev/saludtech-alpes/sta-images/consumidor:latest
