deployment/k8s-anonimizacion.yml
apiVersion: v1
kind: Service
metadata:
  name: anonimizacion-service
  namespace: sta-salud
  annotations:
    cloud.google.com/backend-config: '{"default": "anonimizacion-config"}'  
spec:
  selector:
    app: anonimizacion
  type: NodePort
  ports:
    - port: 80
      targetPort: 8001
      protocol: TCP
      nodePort: 31024

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: anonimizacion
  namespace: sta-salud
  labels:
    app: anonimizacion
spec:
  replicas: 1
  selector:
    matchLabels:
      app: anonimizacion
  template:
    metadata:
      labels:
        app: anonimizacion
    spec:
      containers:
      - name: anonimizacion
        image: us-central1-docker.pkg.dev/saludtech-alpes/sta-images/anonimizacion:latest
        command: ["uvicorn", "api.main:app", "--host", "0.0.0.0", "--port", "8001"]
        ports:
        - containerPort: 8001
