deployment/k8s-canonizacion.yml
# CANONIZATION DB
apiVersion: apps/v1
kind: Deployment
metadata:
  name: canonization-db
  #namespace: sta-salud
  labels:
    app: canonization-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: canonization-db
  template:
    metadata:
      labels:
        app: canonization-db
    spec:
      containers:
      - name: canonization-db
        image: postgres:latest
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
            ephemeral-storage: "1Gi"
          limits:
            memory: "256Mi"
            cpu: "300m"
            ephemeral-storage: "2Gi"
        ports:
        - containerPort: 5432
        readinessProbe:
          exec:
            command:
            - pg_isready
            - -d
            - $(POSTGRES_DB)
            - -U
            - $(POSTGRES_USER)
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 5
        volumeMounts:
        - name: canonization-data
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: canonization-data
        persistentVolumeClaim:
          claimName: canonization-pvc
---
# CANONIZATION DB SERVICE
apiVersion: v1
kind: Service
metadata:
  name: canonization-db
spec:
  selector:
    app: canonization-db
  ports:
  - port: 5432
    targetPort: 5432  
---
# CANONIZATION APP
apiVersion: apps/v1
kind: Deployment
metadata:
  name: canonization
  #namespace: sta-salud
  labels:
    app: canonization
spec:
  replicas: 1
  selector:
    matchLabels:
      app: canonization
  template:
    metadata:
      labels:
        app: canonization
    spec:
      containers:
      - name: canonization
        image: us-central1-docker.pkg.dev/saludtech-alpes/sta-images/canonization:latest
        command: ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8005"]
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
            ephemeral-storage: "1Gi"
          limits:
            memory: "256Mi"
            cpu: "300m"
            ephemeral-storage: "2Gi"
        ports:
        - containerPort: 8005
---
# CANONIZATION CONSUMER
apiVersion: apps/v1
kind: Deployment
metadata:
  name: canonization-consumer
  #namespace: sta-salud
  labels:
    app: canonization-consumer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: canonization-consumer
  template:
    metadata:
      labels:
        app: canonization-consumer
    spec:
      containers:
      - name: canonization-consumer
        image: us-central1-docker.pkg.dev/saludtech-alpes/sta-images/canonization:latest
        command: ["python", "-u", "start_consumers.py"]
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
            ephemeral-storage: "1Gi"
          limits:
            memory: "256Mi"
            cpu: "300m"
            ephemeral-storage: "2Gi"
---
# CANONIZATION WORKER
apiVersion: apps/v1
kind: Deployment
metadata:
  name: canonization-worker
  #namespace: sta-salud
  labels:
    app: canonization-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: canonization-worker
  template:
    metadata:
      labels:
        app: canonization-worker
    spec:
      containers:
      - name: canonization-worker
        image: us-central1-docker.pkg.dev/saludtech-alpes/sta-images/canonization:latest
        command: ["celery", "-A", "celery_worker", "worker", "--loglevel=info"]
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
            ephemeral-storage: "1Gi"
          limits:
            memory: "256Mi"
            cpu: "300m"
            ephemeral-storage: "2Gi"
---
apiVersion: v1
kind: Service
metadata:
  name: canonization-service
  #namespace: sta-salud
  annotations:
    cloud.google.com/backend-config: '{"default": "canonization-config"}' 
spec:
  selector:
    app: canonization
  type: NodePort
  ports:
    - port: 80
      targetPort: 8005
      protocol: TCP
      nodePort: 31022
