deployment/k8s-ingestion.yml
apiVersion: v1
kind: Service
metadata:
  name: ingestion-service
  namespace: sta-salud
  annotations:
    cloud.google.com/backend-config: '{"default": "ingestion-config"}'  
spec:
  selector:
    app: ingestion
  type: NodePort
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
      nodePort: 31025

---
# INGESTION DB
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingestion-db
  namespace: sta-salud
  labels:
    app: ingestion-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ingestion-db
  template:
    metadata:
      labels:
        app: ingestion-db
    spec:
      containers:
      - name: ingestion-db
        image: postgres:latest
        ports:
        - containerPort: 5432
---
# INGESTION APP
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingestion
  namespace: sta-salud
  labels:
    app: ingestion
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ingestion
  template:
    metadata:
      labels:
        app: ingestion
    spec:
      containers:
      - name: ingestion
        image: us-central1-docker.pkg.dev/saludtech-alpes/sta-images/ingestion:latest
        command: ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
        ports:
        - containerPort: 8000
---
# INGESTION CONSUMER
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingestion-consumer
  namespace: sta-salud
  labels:
    app: ingestion-consumer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ingestion-consumer
  template:
    metadata:
      labels:
        app: ingestion-consumer
    spec:
      containers:
      - name: ingestion-consumer
        image: us-central1-docker.pkg.dev/saludtech-alpes/sta-images/ingestion:latest
        command: ["python", "-u", "start_consumers.py"]
---
# INGESTION WORKER
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingestion-worker
  namespace: sta-salud
  labels:
    app: ingestion-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ingestion-worker
  template:
    metadata:
      labels:
        app: ingestion-worker
    spec:
      containers:
      - name: ingestion-worker
        image: us-central1-docker.pkg.dev/saludtech-alpes/sta-images/ingestion:latest
        command: ["celery", "-A", "celery_worker", "worker", "--loglevel=info"]
