deployment/k8s-pulsar.yml
apiVersion: v1
kind: Service
metadata:
  name: zookeeper
  namespace: sta-salud
spec:
  ports:
    - port: 2181
  selector:
    app: zookeeper
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zookeeper
  namespace: sta-salud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zookeeper
  template:
    metadata:
      labels:
        app: zookeeper
    spec:
      containers:
      - name: zookeeper
        image: apachepulsar/pulsar:latest
        command: 
        - bash
        - -c
        - |
          bin/apply-config-from-env.py conf/zookeeper.conf && \
          bin/generate-zookeeper-config.sh conf/zookeeper.conf && \
          exec bin/pulsar zookeeper
---
apiVersion: v1
kind: Service
metadata:
  name: broker
  namespace: sta-salud
spec:
  ports:
    - port: 6650
      name: pulsar
    - port: 8080
      name: http
  selector:
    app: broker
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: broker
  namespace: sta-salud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: broker
  template:
    metadata:
      labels:
        app: broker
    spec:
      containers:
      - name: broker
        image: apachepulsar/pulsar:latest
        ports:
        - containerPort: 6650
        - containerPort: 8080
        command: 
        - bash
        - -c
        - "bin/apply-config-from-env.py conf/broker.conf && exec bin/pulsar broker"
