deployment/k8s-ingress.yml
###################################
# INGRESS
###################################
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  namespace: sta-salud
  labels:
    name: gateway-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "sta-ingress-ip"
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /ingestion
            backend:
              service:
                name: ingestion-service
                port:
                  number: 80
          - pathType: Prefix
            path: /anonimizacion
            backend:
              service:
                name: anonimizacion-service
                port:
                  number: 80
          - pathType: Prefix
            path: /canonization
            backend:
              service:
                name: canonization-service
                port:
                  number: 80
          - pathType: Prefix
            path: /auditoria
            backend:
              service:
                name: auditoria-service
                port:
                  number: 80
